# plm-fid

./: .gitignore  LICENSE  README.md  pyproject.toml
example/cath/: class1.fasta  class2.fasta  reference.fasta
example/cov/: ntd.fasta  rbd.fasta  reference.fasta
src/plm_fid/: __init__.py  api.py  cli.py  distance.py  embedding.py  model_configs.py  models.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py  test_distance.py  test_embedder.py
